--- a/static/style.css
+++ b/static/style.css
@@ -1,22 +1,34 @@
-body{
-    font-family: Arial, Helvetica,sans-serif;
-    background-color: #c2e2fa;
-    display:flex;
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
-container{
-    background-color: white;
-    padding: 20px;
-    border-radius: 50px;
-    box-shadow: 0 0 10px rgb(222, 180, 246);
-    width: 35px;
+
+.container {
+    background-color: #72dbbd;
+    padding: 25px 35px;
+    border-radius: 5px;
+    box-shadow: 0 10px #4e4444;
 }
 input{
-    width:90%;
-    padding:8px;
-    margin: 80px;
-    border: radius 5px;
-    border: 1px solid #b8e2f4;
+    width: 90%;
+    padding: 8px;
+    margin: 8px 0;
+    border-radius: 5px;
+    border: 1px solid #783e3e;
+}
+button {
+    width: 100%;
+    padding: 10px;
+    background-color: #2848ba;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+button:hover {
+    background-color: #1e357a;
 }
